<resources>
    <string name="app_name">Exchange</string>
    <string name="tvAmount">Amount</string>
    <string name="txtFromCurrency">From currency</string>
    <string name="txtCoin01">Euro</string>
    <string name="txtCoin02">Dollar</string>
    <string name="txtCoin03">Pound</string>
    <string name="txtToCurrency">To currency</string>
    <string name="amountDefault">0.00</string>
    <string name="msg_invalidValue">Invalid value entered</string>
    <string name="imgFromDescription">euro</string>
</resources>
